syntax = "proto3";

package sequence.v1.job;

import "api/types/job.proto";
import "api/types/log.proto";
import "api/types/workflow.proto";

option go_package = "github.com/frantjc/sequence/api/v1/job";

service Job {
    rpc RunJob(RunJobRequest) returns (stream sequence.types.Log);
}

message RunJobRequest {
    sequence.types.Job job = 1;
    sequence.types.Workflow workflow = 2;
    string repository = 4;
    string runner_image = 5;
    string action_image = 6;
    bool verbose = 7;
}
