syntax = "proto3";

package sequence.v1.step;

import "pb/types/job.proto";
import "pb/types/log.proto";
import "pb/types/step.proto";
import "pb/types/workflow.proto";

option go_package = "github.com/frantjc/sequence/pb/v1/step";

service Step {
    rpc RunStep(RunStepRequest) returns (stream sequence.types.Log);
}

message RunStepRequest {
    sequence.types.Step step = 1;
    sequence.types.Job job = 2;
    sequence.types.Workflow workflow = 3;
    string repository = 4;
    string runner_image = 5;
    bool verbose = 6;
}
